# ozon-ord

./: .env.example  .gitignore  AGENTS.md  APPS_SCRIPT.md  PLAN.md  env_loader.py  main.py  ozon_ord_api.py  ozon_ord_mapping.py  platform_errors.json  pyproject.toml  sheets_reader.py  sync_service.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/ozon_ord_sync/: __init__.py  apps_script_client.py  cli.py  env_loader.py  main.py  ozon_ord_api.py  ozon_ord_mapping.py  sheets_reader.py  sync_service.py
src/ozon_ord_sync/application/: __init__.py  commands.py  formatting.py  sheet_parser.py  sync_service.py  sync_workflows.py
src/ozon_ord_sync/config/: factories.py  runtime_auth.py
src/ozon_ord_sync/domain/: __init__.py  mapping.py  models.py
src/ozon_ord_sync/infrastructure/: api_server.py  apps_script.py  google_sheets.py  ozon_ord.py
