[project]
name = "ozon-ord-sync"
version = "0.1.0"
description = "Google Sheets to Ozon ORD synchronization CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ozon-ord-sync = "ozon_ord_sync.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
